# Template_Canister

./: .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json
src/: Cargo.toml  example_canister.did  lib.rs
src/core/: api.rs  constants.rs  init_and_upgrade.rs  mod.rs  runtime.rs  stable_memory.rs  types.rs  utils.rs  working_stats.rs
src/example_custom_module/: api.rs  btree_logic.rs  logic.rs  mod.rs  types.rs
src/http/: api.rs  inbound.rs  mod.rs  outbound.rs
src/timers/: Version.txt  api.rs  mod.rs  state.rs  timers.rs
