[package]
name = "canister_modules"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "./"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12.0"
ic-cdk-macros = "0.8.1"
candid = "0.10.0"
serde = "1.0.159"
ic-cdk-timers = "0.6.0"
ciborium = "0.2.1"
ic-stable-structures = "0.6.0"
# for https calls
serde_json = "1.0.108"


